--- a/src/layouts/Head/navbar.css
+++ b/src/layouts/Head/navbar.css
@@ -61,7 +61,8 @@ nav {
 } */
 
 .background-color{
-  background-color: rgb(215, 223, 239, 0.5);}
+  background-color: rgb(215, 223, 239, 0.5);
+}
 
 @-webkit-keyframes fadeInDown {
   0% {
@@ -136,7 +137,7 @@ nav {
   }
   .navbar-collapse {
     padding-top: 20px;
-    background: rgb(215, 223, 239);
+    /* background: rgb(215, 223, 239); */
   }
 }
 .navbar-white.shrink .navbar-brand,
