--- a/src/layouts/Head/navbar.css
+++ b/src/layouts/Head/navbar.css
@@ -21,8 +21,8 @@
   font-size: 14px;
   font-weight: 500;
   letter-spacing: 1px;
-  /* color: #fff; */
-  color: rgb(5, 5, 5);
+  color: #fff;
+  /* color: rgb(5, 5, 5); */
 
 }
 /* .navbar-nav{
@@ -61,7 +61,7 @@ nav {
 } */
 
 .background-color{
-  background-color: rgb(215, 223, 239, 0.5);
+  /* background-color: rgb(215, 223, 239, 0.5); */
 }
 
 @-webkit-keyframes fadeInDown {
@@ -126,8 +126,7 @@ nav {
 
   .navbar-collapse .navbar-nav .nav-item .nav-link {
     padding: 5px 12px;
-    color: #333;
-  }
+    color: #fff;  }
   .closeData {
     display: flex;
   }
